# led-soundsystem

./: .gitignore  CMakeLists.txt  README.md  justfile
.helix/: languages.toml
c/: CMakeLists.txt  led-soundsystem.c
hardware/motherboard/: motherboard.kicad_pro  motherboard.kicad_sch
py/: justfile  main.py  pyproject.toml
scripts/: plotfft.jl
src/: capture.c  capture.h  dsp.c  dsp.h  effects.c  fft.c  leds.c  leds.h  main.c  ws2805.c  ws2805.h  ws2805.pio
